作成ページをインデックスページに統合

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <a href="/" class="header-logo">GoTo APP</a>
+      <a class="header-logo" href="/top">What are "GoTo APP"</a>
     </header>
     <div class="container">
       <div class="container-header">
         <h1>旅行リスト編集</h1>
-        <a href="/index" class="cancel-button">キャンセル</a>
+        <a href="/" class="cancel-button">キャンセル</a>
       </div>
       <div class="item-form-wrapper">
         <p class="form-label">行きたいところ</p>
