--- a/views/top.ejs
+++ b/views/top.ejs
@@ -18,7 +18,7 @@
           <br>
           一度リストアップして来たる日に備えておきましょう！
         </p>
-        <a class="index-button" href="/index">一覧を見る</a>
+        <a class="index-button" href="/">一覧を見る</a><br>
       </div>
       <div class="top-image">
         <img src="/images/top.png">
