--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/" class="header-logo">GoTo APP</a>
+      <a class="header-logo" href="/top">What are "GoTo APP"</a>
     </header>
     <div class="container">
       <div class="container-header">
